markdown/ai/2.0.0/api/chat-memory.md
---
title: "Chat Memory"
source: "ROOT:api/chat-memory.adoc"
---

<a id="ChatMemory"></a>

# Chat Memory

Large language models (LLMs) are stateless, meaning they do not retain information about previous interactions. This can be a limitation when you want to maintain context or state across multiple interactions. To address this, Spring AI provides chat memory features that allow you to store and retrieve information across multiple interactions with the LLM.

The `ChatMemory` abstraction allows you to implement various types of memory to support different use cases. The underlying storage of the messages is handled by the `ChatMemoryRepository`, whose sole responsibility is to store and retrieve messages. It’s up to the `ChatMemory` implementation to decide which messages to keep and when to remove them. Examples of strategies could include keeping the last N messages, keeping messages for a certain time period, or keeping messages up to a certain token limit.

Before choosing a memory type, it’s essential to understand the difference between chat memory and chat history.

- **Chat Memory**. The information that a large-language model retains and uses to maintain contextual awareness throughout a conversation.
- **Chat History**. The entire conversation history, including all messages exchanged between the user and the model.

The `ChatMemory` abstraction is designed to manage the *chat memory*. It allows you to store and retrieve messages that are relevant to the current conversation context. However, it is not the best fit for storing the *chat history*. If you need to maintain a complete record of all the messages exchanged, you should consider using a different approach, such as relying on Spring Data for efficient storage and retrieval of the complete chat history.

<a id="_quick_start"></a>

## Quick Start

Spring AI auto-configures a `ChatMemory` bean that you can use directly in your application. By default, it uses an in-memory repository to store messages (`InMemoryChatMemoryRepository`) and a `MessageWindowChatMemory` implementation to manage the conversation history. If a different repository is already configured (e.g., Cassandra, JDBC, or Neo4j), Spring AI will use that instead.

```java
@Autowired
ChatMemory chatMemory;
```

The following sections will describe further the different memory types and repositories available in Spring AI.

<a id="_memory_types"></a>

## Memory Types

The `ChatMemory` abstraction allows you to implement various types of memory to suit different use cases. The choice of memory type can significantly impact the performance and behavior of your application. This section describes the built-in memory types provided by Spring AI and their characteristics.

<a id="_message_window_chat_memory"></a>

### Message Window Chat Memory

`MessageWindowChatMemory` maintains a sliding window of messages up to a specified maximum size. When the number of messages exceeds the maximum, older messages are evicted while always preserving `SystemMessage` instances. The default window size is 20 messages.

```java
MessageWindowChatMemory memory = MessageWindowChatMemory.builder()
    .maxMessages(10)
    .build();
```

This is the default message type used by Spring AI to auto-configure a `ChatMemory` bean.

<a id="_turn_boundary_eviction"></a>

#### Turn-boundary eviction

When eviction is needed, `MessageWindowChatMemory` always removes whole turns rather than cutting mid-turn. A *turn* starts at a `UserMessage` and includes all subsequent assistant replies, tool calls, and tool responses up to the next `UserMessage`. If the raw eviction point lands on a non-user message (for example, an assistant reply in the middle of a tool-calling exchange), the cut is advanced forward to the next `UserMessage` so that the kept window always begins at a complete turn.

This means `maxMessages` is an *upper bound* on the number of messages stored — the actual count may be somewhat lower when snapping is needed to find the next turn boundary.

> [!NOTE]
> If `maxMessages` is smaller than a single complete turn (for example, a multi-step tool-calling exchange that exceeds the window size), all non-system messages may be evicted until a new `UserMessage` is added. Size `maxMessages` generously enough to hold at least one representative turn for your use case.

<a id="_memory_storage"></a>

## Memory Storage

Spring AI offers the `ChatMemoryRepository` abstraction for storing chat memory. This section describes the built-in repositories provided by Spring AI and how to use them, but you can also implement your own repository if needed.

> [!NOTE]
> Azure Cosmos DB chat memory repository support is available as an external module maintained by the Azure Cosmos DB team.
> See [azurecosmosdb.github.io/spring-ai/docs/index.html](https://azurecosmosdb.github.io/spring-ai/docs/index.html) for more information.

<a id="_in_memory_repository"></a>

### In-Memory Repository

`InMemoryChatMemoryRepository` stores messages in memory using a `ConcurrentHashMap`.

By default, if no other repository is already configured, Spring AI auto-configures a `ChatMemoryRepository` bean of type `InMemoryChatMemoryRepository` that you can use directly in your application.

```java
@Autowired
ChatMemoryRepository chatMemoryRepository;
```

If you’d rather create the `InMemoryChatMemoryRepository` manually, you can do so as follows:

```java
ChatMemoryRepository repository = new InMemoryChatMemoryRepository();
```

<a id="_jdbcchatmemoryrepository"></a>

### JdbcChatMemoryRepository

`JdbcChatMemoryRepository` is a built-in implementation that uses JDBC to store messages in a relational database. It supports multiple databases out-of-the-box and is suitable for applications that require persistent storage of chat memory.

Messages are retrieved in ascending order (oldest-to-newest), which is the expected format for LLM conversation history. Ordering is maintained by a `sequence_id` column that records each message’s position within its conversation. Each message also stores a creation `timestamp`, exposed in the message metadata under the `JdbcChatMemoryRepository.CONVERSATION_TS` key as a `java.time.Instant`, so applications can display when a message was created.

> [!WARNING]
> **`JdbcChatMemoryRepository` does not support tool call messages.**
> `AssistantMessage` instances containing tool calls and `ToolResponseMessage` instances are silently filtered out on save and will not appear in the retrieved conversation history.
> If your application uses tool calling, consider the [Spring AI Session](https://spring-ai-community.github.io/spring-ai-session/latest/) project and the [JDBC session store](https://spring-ai-community.github.io/spring-ai-session/latest/session-jdbc/), which properly persist all message types.

First, add the following dependency to your project:

#### Maven

```xml
<dependency>
    <groupId>org.springframework.ai</groupId>
    <artifactId>spring-ai-starter-model-chat-memory-repository-jdbc</artifactId>
</dependency>
```

#### Gradle

```groovy
dependencies {
    implementation 'org.springframework.ai:spring-ai-starter-model-chat-memory-repository-jdbc'
}
```

Spring AI provides auto-configuration for the `JdbcChatMemoryRepository`, that you can use directly in your application.

```java
@Autowired
JdbcChatMemoryRepository chatMemoryRepository;

ChatMemory chatMemory = MessageWindowChatMemory.builder()
    .chatMemoryRepository(chatMemoryRepository)
    .maxMessages(10)
    .build();
```

If you’d rather create the `JdbcChatMemoryRepository` manually, you can do so by providing a `JdbcTemplate` instance and a `JdbcChatMemoryRepositoryDialect`:

```java
ChatMemoryRepository chatMemoryRepository = JdbcChatMemoryRepository.builder()
    .jdbcTemplate(jdbcTemplate)
    .dialect(new PostgresChatMemoryRepositoryDialect())
    .build();

ChatMemory chatMemory = MessageWindowChatMemory.builder()
    .chatMemoryRepository(chatMemoryRepository)
    .maxMessages(10)
    .build();
```

<a id="_reading_message_timestamps"></a>

#### Reading Message Timestamps

Each stored message records when it was created. The timestamp is available in the message metadata under the `JdbcChatMemoryRepository.CONVERSATION_TS` key as a `java.time.Instant`, which is useful for displaying message times in a UI:

```java
List<Message> messages = chatMemory.get(conversationId);
for (Message message : messages) {
    Instant createdAt = (Instant) message.getMetadata().get(JdbcChatMemoryRepository.CONVERSATION_TS);
}
```

The timestamp is preserved when a conversation is saved again, so a message keeps its original creation time for the lifetime of the conversation.

<a id="_supported_databases_and_dialect_abstraction"></a>

#### Supported Databases and Dialect Abstraction

Spring AI supports multiple relational databases via a dialect abstraction. The following databases are supported out-of-the-box:

- PostgreSQL
- MySQL / MariaDB
- SQL Server
- HSQLDB
- Oracle Database

The correct dialect can be auto-detected from the JDBC URL when using `JdbcChatMemoryRepositoryDialect.from(DataSource)`. You can extend support for other databases by implementing the `JdbcChatMemoryRepositoryDialect` interface.

<a id="_configuration_properties"></a>

#### Configuration Properties

|  |  |  |
| --- | --- | --- |
| Property | Description | Default Value |
| `spring.ai.chat.memory.repository.jdbc.initialize-schema` | Controls when to initialize the schema. Values: `embedded` (default), `always`, `never`. | `embedded` |
| `spring.ai.chat.memory.repository.jdbc.schema` | Location of the schema script to use for initialization. Supports `classpath:` URLs and platform placeholders. | `classpath:org/springframework/ai/chat/memory/repository/jdbc/schema-@@platform@@.sql` |
| `spring.ai.chat.memory.repository.jdbc.platform` | Platform to use in initialization scripts if the @@platform@@ placeholder is used. | *auto-detected* |

<a id="_schema_initialization"></a>

#### Schema Initialization

The auto-configuration will automatically create the `SPRING_AI_CHAT_MEMORY` table on startup, using a vendor-specific SQL script for your database. By default, schema initialization runs only for embedded databases (H2, HSQL, Derby, etc.).

> [!NOTE]
> As of 2.0.0, the schema adds a `sequence_id` column that determines message ordering, alongside the existing `timestamp` column (now exposed via message metadata). Upgrading an existing application requires adding the new column; see [upgrade-notes.adoc](../upgrade-notes.md) for the migration steps.

You can control schema initialization using the `spring.ai.chat.memory.repository.jdbc.initialize-schema` property:

```properties
spring.ai.chat.memory.repository.jdbc.initialize-schema=embedded # Only for embedded DBs (default)
spring.ai.chat.memory.repository.jdbc.initialize-schema=always   # Always initialize
spring.ai.chat.memory.repository.jdbc.initialize-schema=never    # Never initialize (useful with Flyway/Liquibase)
```

To override the schema script location, use:

```properties
spring.ai.chat.memory.repository.jdbc.schema=classpath:/custom/path/schema-mysql.sql
```

<a id="_extending_dialects"></a>

#### Extending Dialects

To add support for a new database, implement the `JdbcChatMemoryRepositoryDialect` interface and provide SQL for selecting, inserting, and deleting messages. You can then pass your custom dialect to the repository builder.

```java
ChatMemoryRepository chatMemoryRepository = JdbcChatMemoryRepository.builder()
    .jdbcTemplate(jdbcTemplate)
    .dialect(new MyCustomDbDialect())
    .build();
```

<a id="_cassandrachatmemoryrepository"></a>

### CassandraChatMemoryRepository

`CassandraChatMemoryRepository` uses Apache Cassandra to store messages.  It is suitable for applications that require persistent storage of chat memory, especially for availability, durability, scale, and when taking advantage of time-to-live (TTL) feature.

`CassandraChatMemoryRepository` has a time-series schema, keeping record of all past chat windows, valuable for governance and auditing.  Setting time-to-live to some value, for example three years, is recommended.

Messages are retrieved in ascending timestamp order (oldest-to-newest), which is the expected format for LLM conversation history.

To use `CassandraChatMemoryRepository` first, add the dependency to your project:

#### Maven

```xml
<dependency>
    <groupId>org.springframework.ai</groupId>
    <artifactId>spring-ai-starter-model-chat-memory-repository-cassandra</artifactId>
</dependency>
```

#### Gradle

```groovy
dependencies {
    implementation 'org.springframework.ai:spring-ai-starter-model-chat-memory-repository-cassandra'
}
```

Spring AI provides auto-configuration for the `CassandraChatMemoryRepository` that you can use directly in your application.

```java
@Autowired
CassandraChatMemoryRepository chatMemoryRepository;

ChatMemory chatMemory = MessageWindowChatMemory.builder()
    .chatMemoryRepository(chatMemoryRepository)
    .maxMessages(10)
    .build();
```

If you’d rather create the `CassandraChatMemoryRepository` manually, you can do so by providing a `CassandraChatMemoryRepositoryConfig` instance:

```java
ChatMemoryRepository chatMemoryRepository = CassandraChatMemoryRepository
    .create(CassandraChatMemoryRepositoryConfig.builder().withCqlSession(cqlSession));

ChatMemory chatMemory = MessageWindowChatMemory.builder()
    .chatMemoryRepository(chatMemoryRepository)
    .maxMessages(10)
    .build();
```

<a id="_configuration_properties_2"></a>

#### Configuration Properties

|  |  |  |
| --- | --- | --- |
| Property | Description | Default Value |
| `spring.cassandra.contactPoints` | Host(s) to initiate cluster discovery | `127.0.0.1` |
| `spring.cassandra.port` | Cassandra native protocol port to connect to | `9042` |
| `spring.cassandra.localDatacenter` | Cassandra datacenter to connect to | `datacenter1` |
| `spring.ai.chat.memory.cassandra.time-to-live` | Time to live (TTL) for messages written in Cassandra |  |
| `spring.ai.chat.memory.cassandra.keyspace` | Cassandra keyspace | `springframework` |
| `spring.ai.chat.memory.cassandra.messages-column` | Cassandra column name for messages | `springframework` |
| `spring.ai.chat.memory.cassandra.table` | Cassandra table | `ai_chat_memory` |
| `spring.ai.chat.memory.cassandra.initialize-schema` | Whether to initialize the schema on startup. | `true` |

<a id="_schema_initialization_2"></a>

#### Schema Initialization

The auto-configuration will automatically create the `ai_chat_memory` table.

You can disable the schema initialization by setting the property `spring.ai.chat.memory.repository.cassandra.initialize-schema` to `false`.

> [!WARNING]
> **`CassandraChatMemoryRepository` does not support tool call messages.**
> `AssistantMessage` instances containing tool calls and `ToolResponseMessage` instances are silently filtered out on save and will not appear in the retrieved conversation history.
> If your application uses tool calling, consider the [Spring AI Session](https://spring-ai-community.github.io/spring-ai-session/latest/) project and the [JDBC session store](https://spring-ai-community.github.io/spring-ai-session/latest/session-jdbc/), which properly persist all message types.

<a id="_neo4j_chatmemoryrepository"></a>

### Neo4j ChatMemoryRepository

`Neo4jChatMemoryRepository` is a built-in implementation that uses Neo4j to store chat messages as nodes and relationships in a property graph database. It is suitable for applications that want to leverage Neo4j’s graph capabilities for chat memory persistence.

Messages are retrieved in ascending message index order (oldest-to-newest), which is the expected format for LLM conversation history.

First, add the following dependency to your project:

#### Maven

```xml
<dependency>
    <groupId>org.springframework.ai</groupId>
    <artifactId>spring-ai-starter-model-chat-memory-repository-neo4j</artifactId>
</dependency>
```

#### Gradle

```groovy
dependencies {
    implementation 'org.springframework.ai:spring-ai-starter-model-chat-memory-repository-neo4j'
}
```

Spring AI provides auto-configuration for the `Neo4jChatMemoryRepository`, which you can use directly in your application.

```java
@Autowired
Neo4jChatMemoryRepository chatMemoryRepository;

ChatMemory chatMemory = MessageWindowChatMemory.builder()
    .chatMemoryRepository(chatMemoryRepository)
    .maxMessages(10)
    .build();
```

If you’d rather create the `Neo4jChatMemoryRepository` manually, you can do so by providing a Neo4j `Driver` instance:

```java
ChatMemoryRepository chatMemoryRepository = Neo4jChatMemoryRepository.builder()
    .driver(driver)
    .build();

ChatMemory chatMemory = MessageWindowChatMemory.builder()
    .chatMemoryRepository(chatMemoryRepository)
    .maxMessages(10)
    .build();
```

<a id="_configuration_properties_3"></a>

#### Configuration Properties

|  |  |  |
| --- | --- | --- |
| Property | Description | Default Value |
| `spring.ai.chat.memory.repository.neo4j.session-label` | The label for the nodes that store conversation sessions | `Session` |
| `spring.ai.chat.memory.repository.neo4j.message-label` | The label for the nodes that store messages | `Message` |
| `spring.ai.chat.memory.repository.neo4j.tool-call-label` | The label for nodes that store tool calls (e.g. in Assistant Messages) | `ToolCall` |
| `spring.ai.chat.memory.repository.neo4j.metadata-label` | The label for nodes that store message metadata | `Metadata` |
| `spring.ai.chat.memory.repository.neo4j.tool-response-label` | The label for the nodes that store tool responses | `ToolResponse` |
| `spring.ai.chat.memory.repository.neo4j.media-label` | The label for the nodes that store media associated with a message | `Media` |

<a id="_index_initialization"></a>

#### Index Initialization

The Neo4j repository will automatically ensure that indexes are created for conversation IDs and message indices to optimize performance. If you use custom labels, indexes will be created for those labels as well. No schema initialization is required, but you should ensure your Neo4j instance is accessible to your application.

<a id="_mongochatmemoryrepository"></a>

### MongoChatMemoryRepository

`MongoChatMemoryRepository` is a built-in implementation that uses MongoDB to store messages. It is suitable for applications that require a flexible, document-oriented database for chat memory persistence.

Messages are retrieved in ascending timestamp order (oldest-to-newest), which is the expected format for LLM conversation history. This ordering is consistent across all chat memory repository implementations.

> [!WARNING]
> **`MongoChatMemoryRepository` does not support tool call messages.**
> `AssistantMessage` instances containing tool calls and `ToolResponseMessage` instances are silently filtered out on save and will not appear in the retrieved conversation history.
> If your application uses tool calling, consider the [Spring AI Session](https://spring-ai-community.github.io/spring-ai-session/latest/) project and the [JDBC session store](https://spring-ai-community.github.io/spring-ai-session/latest/session-jdbc/), which properly persist all message types.

First, add the following dependency to your project:

#### Maven

```xml
<dependency>
    <groupId>org.springframework.ai</groupId>
    <artifactId>spring-ai-starter-model-chat-memory-repository-mongodb</artifactId>
</dependency>
```

#### Gradle

```groovy
dependencies {
    implementation 'org.springframework.ai:spring-ai-starter-model-chat-memory-repository-mongodb'
}
```

Spring AI provides auto-configuration for the `MongoChatMemoryRepository`, which you can use directly in your application.

```java
@Autowired
MongoChatMemoryRepository chatMemoryRepository;

ChatMemory chatMemory = MessageWindowChatMemory.builder()
    .chatMemoryRepository(chatMemoryRepository)
    .maxMessages(10)
    .build();
```

If you’d rather create the `MongoChatMemoryRepository` manually, you can do so by providing a `MongoTemplate` instance:

```java
ChatMemoryRepository chatMemoryRepository = MongoChatMemoryRepository.builder()
    .mongoTemplate(mongoTemplate)
    .build();

ChatMemory chatMemory = MessageWindowChatMemory.builder()
    .chatMemoryRepository(chatMemoryRepository)
    .maxMessages(10)
    .build();
```

<a id="_configuration_properties_4"></a>

#### Configuration Properties

|  |  |  |
| --- | --- | --- |
| Property | Description | Default Value |
| `spring.ai.chat.memory.repository.mongo.create-indices` | Should indices be created or recreated automatically on startup. Note: Changing the \* TTL value will drop the TTL index and recreate it | `false` |
| `spring.ai.chat.memory.repository.mongo.ttl` | Time to live (TTL) for messages written in MongoDB, in seconds. If not set, messages will be stored indefinitely. | `0` |

<a id="_collection_initialization"></a>

#### Collection Initialization

The auto-configuration will automatically create the `ai_chat_memory` collection on startup if it does not already exist.

<a id="_redischatmemoryrepository"></a>

### RedisChatMemoryRepository

`RedisChatMemoryRepository` is a built-in implementation that uses Redis Stack (with Redis Query Engine and RedisJSON) to store chat messages.
It is suitable for applications that require high-performance, low-latency chat memory persistence with optional TTL (time-to-live) support and advanced querying capabilities.

The repository stores messages as JSON documents and creates a search index for efficient querying.
It also provides extended query capabilities through the `AdvancedRedisChatMemoryRepository` interface for searching messages by content, type, time range, and metadata.

Messages are retrieved in ascending timestamp order (oldest-to-newest), which is the expected format for LLM conversation history.

First, add the following dependency to your project:

#### Maven

```xml
<dependency>
    <groupId>org.springframework.ai</groupId>
    <artifactId>spring-ai-starter-model-chat-memory-repository-redis</artifactId>
</dependency>
```

#### Gradle

```groovy
dependencies {
    implementation 'org.springframework.ai:spring-ai-starter-model-chat-memory-repository-redis'
}
```

Spring AI provides auto-configuration for the `RedisChatMemoryRepository`, which you can use directly in your application.

```java
@Autowired
RedisChatMemoryRepository chatMemoryRepository;

ChatMemory chatMemory = MessageWindowChatMemory.builder()
    .chatMemoryRepository(chatMemoryRepository)
    .maxMessages(10)
    .build();
```

If you’d rather create the `RedisChatMemoryRepository` manually, you can do so by providing a `RedisClient` client:

```java
RedisClient jedisClient = RedisClient.builder().hostAndPort("localhost", 6379).build();

ChatMemoryRepository chatMemoryRepository = RedisChatMemoryRepository.builder()
    .jedisClient(jedisClient)
    .indexName("my-chat-index")
    .keyPrefix("my-chat:")
    .timeToLive(Duration.ofHours(24))
    .build();

ChatMemory chatMemory = MessageWindowChatMemory.builder()
    .chatMemoryRepository(chatMemoryRepository)
    .maxMessages(10)
    .build();
```

<a id="_configuration_properties_5"></a>

#### Configuration Properties

|  |  |  |
| --- | --- | --- |
| Property | Description | Default Value |
| `spring.ai.chat.memory.redis.host` | Redis server host | `localhost` |
| `spring.ai.chat.memory.redis.port` | Redis server port | `6379` |
| `spring.ai.chat.memory.redis.index-name` | Name of the Redis search index | `chat-memory-idx` |
| `spring.ai.chat.memory.redis.key-prefix` | Key prefix for chat memory entries | `chat-memory:` |
| `spring.ai.chat.memory.redis.time-to-live` | Time to live for chat memory entries (e.g., `24h`, `30d`) | *no expiration* |
| `spring.ai.chat.memory.redis.initialize-schema` | Whether to initialize the Redis schema on startup | `true` |
| `spring.ai.chat.memory.redis.max-conversation-ids` | Maximum number of conversation IDs to return | `1000` |
| `spring.ai.chat.memory.redis.max-messages-per-conversation` | Maximum number of messages to return per conversation | `1000` |

<a id="_advanced_querying"></a>

#### Advanced Querying

The `RedisChatMemoryRepository` also implements `AdvancedRedisChatMemoryRepository`, which provides extended query capabilities:

```java
// Cast to access advanced features
AdvancedRedisChatMemoryRepository advancedRepo = (AdvancedRedisChatMemoryRepository) chatMemoryRepository;

// Find messages by type across all conversations
List<MessageWithConversation> userMessages = advancedRepo.findByType(MessageType.USER, 100);

// Find messages containing specific content
List<MessageWithConversation> results = advancedRepo.findByContent("Spring AI", 50);

// Find messages within a time range
List<MessageWithConversation> recentMessages = advancedRepo.findByTimeRange(
    conversationId,
    Instant.now().minus(Duration.ofHours(1)),
    Instant.now(),
    100
);

// Find messages by metadata
List<MessageWithConversation> priorityMessages = advancedRepo.findByMetadata("priority", "high", 50);

// Execute custom Redis queries
List<MessageWithConversation> customResults = advancedRepo.executeQuery("@type:USER @content:Redis", 100);
```

<a id="_metadata_field_indexing"></a>

#### Metadata Field Indexing

To enable efficient querying on custom metadata fields, you can configure metadata field definitions:

```properties
spring.ai.chat.memory.redis.metadata-fields[0].name=priority
spring.ai.chat.memory.redis.metadata-fields[0].type=tag
spring.ai.chat.memory.redis.metadata-fields[1].name=score
spring.ai.chat.memory.redis.metadata-fields[1].type=numeric
spring.ai.chat.memory.redis.metadata-fields[2].name=category
spring.ai.chat.memory.redis.metadata-fields[2].type=tag
```

Supported field types are: `tag` (for exact match filtering), `text` (for full-text search), and `numeric` (for range queries).

<a id="_schema_initialization_3"></a>

#### Schema Initialization

The auto-configuration will automatically create the Redis search index on startup if it does not already exist.
You can disable this behavior by setting `spring.ai.chat.memory.redis.initialize-schema=false`.

<a id="_requirements"></a>

#### Requirements

- Redis Stack 7.0 or higher (includes Redis Query Engine and RedisJSON modules)
- Jedis client library (included as a dependency)

<a id="_memory_in_chat_client"></a>

## Memory in Chat Client

When using the ChatClient API, you can provide a `ChatMemory` implementation to maintain conversation context across multiple interactions.

Spring AI provides a few built-in Advisors that you can use to configure the memory behavior of the `ChatClient`, based on your needs.

> [!WARNING]
> Currently, the intermediate messages exchanged with a large-language model when performing tool calls are not stored in the memory. This is a limitation of the current implementation and will be addressed in future releases. If you need to store these messages, refer to the instructions for the [User Controlled Tool Execution](tools.md#_user_controlled_tool_execution).

- `MessageChatMemoryAdvisor`. This advisor manages the conversation memory using the provided `ChatMemory` implementation. On each interaction, it retrieves the conversation history from the memory and includes it in the prompt as a collection of messages.
- `VectorStoreChatMemoryAdvisor`. This advisor manages the conversation memory using the provided `VectorStore` implementation. On each interaction, it retrieves the conversation history from the vector store and appends it to the system message as plain text.

For example, if you want to use `MessageWindowChatMemory` with the `MessageChatMemoryAdvisor`, you can configure it as follows:

```java
ChatMemory chatMemory = MessageWindowChatMemory.builder().build();

ChatClient chatClient = ChatClient.builder(chatModel)
    .defaultAdvisors(MessageChatMemoryAdvisor.builder(chatMemory).build())
    .build();
```

When performing a call to the `ChatClient`, the memory will be automatically managed by the `MessageChatMemoryAdvisor`. The conversation history will be retrieved from the memory based on the specified conversation ID.

> [!IMPORTANT]
> The `ChatMemory.CONVERSATION_ID` parameter is **required** for all memory advisors. Calls that omit this parameter will throw an `IllegalArgumentException` at runtime. There is no default conversation ID.

```java
String conversationId = "007";

chatClient.prompt()
    .user("Do I have license to code?")
    .advisors(a -> a.param(ChatMemory.CONVERSATION_ID, conversationId))
    .call()
    .content();
```

<a id="_vectorstorechatmemoryadvisor"></a>

### VectorStoreChatMemoryAdvisor

<a id="_custom_template"></a>

#### Custom Template

The `VectorStoreChatMemoryAdvisor` uses a default template to augment the system message with the retrieved conversation memory. You can customize this behavior by providing your own `PromptTemplate` object via the `.promptTemplate()` builder method.

> [!NOTE]
> The `PromptTemplate` provided here customizes how the advisor merges retrieved memory with the system message. This is distinct from configuring a `TemplateRenderer` on the `ChatClient` itself (using `.templateRenderer()`), which affects the rendering of the initial user/system prompt content **before** the advisor runs. See [ChatClient Prompt Templates](chatclient.md#_prompt_templates) for more details on client-level template rendering.

The custom `PromptTemplate` can use any `TemplateRenderer` implementation (by default, it uses `StPromptTemplate` based on the [StringTemplate](https://www.stringtemplate.org/) engine). The important requirement is that the template must contain the following two placeholders:

- an `instructions` placeholder to receive the original system message.
- a `long_term_memory` placeholder to receive the retrieved conversation memory.

<a id="_memory_in_chat_model"></a>

## Memory in Chat Model

If you’re working directly with a `ChatModel` instead of a `ChatClient`, you can manage the memory explicitly:

```java
// Create a memory instance
ChatMemory chatMemory = MessageWindowChatMemory.builder().build();
String conversationId = "007";

// First interaction
UserMessage userMessage1 = new UserMessage("My name is James Bond");
chatMemory.add(conversationId, userMessage1);
ChatResponse response1 = chatModel.call(new Prompt(chatMemory.get(conversationId)));
chatMemory.add(conversationId, response1.getResult().getOutput());

// Second interaction
UserMessage userMessage2 = new UserMessage("What is my name?");
chatMemory.add(conversationId, userMessage2);
ChatResponse response2 = chatModel.call(new Prompt(chatMemory.get(conversationId)));
chatMemory.add(conversationId, response2.getResult().getOutput());

// The response will contain "James Bond"
```
